--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -589,6 +589,9 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
 .ms-container.two-row ul.ms-list li {
     white-space: nowrap;
 }
+.ms-container.two-row .dienstleistungen-header.dienstleistungen-selected {
+    font-weight: bold;
+}
 /* </2-zeilig> */
 
 
