--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Summary.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Summary.cshtml
@@ -38,7 +38,7 @@
                   {
                       columns.XBound(c => c.FinID).Visible(false);
                       columns.XBound(c => c.FIN);
-                      columns.XBound(c => c.FahrzeugArt);
+                      columns.XBound(c => c.ZulassungFahrzeugart);
                       columns.XBound(c => c.HandelsName);
                       columns.XBound(c => c.WunschKennz1);
                       columns.XBound(c => c.WunschKennz2);
@@ -68,7 +68,7 @@ else if (isMassenabmeldung)
                   {
                       columns.XBound(c => c.FinID).Visible(false);
                       columns.XBound(c => c.FIN);
-                      columns.XBound(c => c.FahrzeugArt);
+                      columns.XBound(c => c.ZulassungFahrzeugart);
                       columns.XBound(c => c.HandelsName);
                       columns.XBound(c => c.Kennzeichen);
                   })
