Step "Fahrzeugdaten", layout reorganization

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Fahrzeugdaten.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Fahrzeugdaten.cshtml
@@ -1,5 +1,4 @@
-﻿@using CkgDomainLogic.Fahrzeugbestand.Models
-@model CkgDomainLogic.Autohaus.ViewModels.KroschkeZulassungViewModel
+﻿@model CkgDomainLogic.Autohaus.ViewModels.KroschkeZulassungViewModel
 
 <h4>@Localize.VehicleData</h4> 
 
